# testcase

./: .gitignore  README.md
bot/: .env  Makefile  pyproject.toml
bot/src/: run.py
bot/src/core/: config.py
bot/src/handlers/: dashboard.py  start.py  stats.py
bot/src/utils/: formatters.py
server/: .env  Dockerfile  Dockerfile.test  Makefile  docker-compose.dev.yml  docker-compose.test.yml  pyproject.toml
server/db/: postmaster.pid
server/db/global/: 1260  pg_control  pg_internal.init
server/db/pg_xact/: 0000
server/migrations/: env.py
server/migrations/versions/: 8695ce9555d8_create_migration_name.py  991bf6417930_create_migration_name_2.py
server/mongo_data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-4619098878136405805.wt  collection-2-4619098878136405805.wt  index-1-4619098878136405805.wt  index-3-4619098878136405805.wt  sizeStorer.wt
server/mongo_data/diagnostic.data/: metrics.2024-12-12T13-01-17Z-00000  metrics.2024-12-12T13-11-51Z-00000  metrics.2024-12-12T13-12-37Z-00000  metrics.2024-12-12T15-03-46Z-00000  metrics.2024-12-12T16-38-21Z-00000  metrics.2024-12-12T16-43-24Z-00000  metrics.2024-12-12T21-17-00Z-00000  metrics.2024-12-13T18-23-55Z-00000  metrics.2024-12-13T18-29-22Z-00000  metrics.2024-12-13T18-38-21Z-00000  metrics.2024-12-13T18-48-50Z-00000  metrics.2024-12-13T19-12-31Z-00000  metrics.2024-12-13T19-31-11Z-00000  metrics.interim  (+20 more)
web-interface/: pyproject.toml
web-interface/web/tasks/: views.py
web-interface/web/templates/tasks/: base.html  dashboard.html
web-interface/web/web/: settings.py
(+71 files in other folders)
